--- a/src/app/pages/user-profile/profile-sections/billing-info/billing-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/billing-info/billing-info.component.html
@@ -82,25 +82,39 @@
 
 <!-- BILL ADDRESS EDIT modal -->
 @if (editBill){
-    <div id="edit-bill-modal" [ngClass]="editBill ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true"
-    class="flex fixed top-0 mt-4 justify-center overflow-x-hidden z-40 justify-center items-center w-full md:inset-0 h-full max-h-screen shadow-2xl">
-        <div class="w-4/5 lg:w-1/2 relative bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 rounded-lg shadow bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
+    <div id="edit-bill-modal"
+    [ngClass]="editBill ? 'backdrop-blur-sm' : ''"
+    tabindex="-1"
+    aria-hidden="true"
+    class="fixed inset-0 z-50 flex items-center justify-center overflow-y-auto p-4">
+
+        <div class="w-full max-w-2xl relative bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 rounded-lg shadow-xl bg-cover bg-right-bottom"
+            (click)="$event.stopPropagation();">
+
             <!-- Modal header -->
-            <div class="flex items-center justify-between pr-2 pt-2 rounded-t dark:border-gray-600">
-                <h2 class="md:text-3xl lg:text-4xl font-bold text-primary-100 ml-4 dark:text-white m-4">{{ 'BILLING._edit' | translate }}</h2>
-                <button (click)="editBill=false;" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="edit-bill-modal">
-                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-                    </svg>
-                    <span class="sr-only">{{ 'CARD._close' | translate }}</span>
+            <div class="flex items-center justify-between p-4 border-b dark:border-gray-600">
+                <h2 class="text-xl md:text-2xl lg:text-3xl font-bold text-primary-100 dark:text-white">
+                {{ 'BILLING._edit' | translate }}
+                </h2>
+                <button (click)="editBill=false;"
+                        type="button"
+                        class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white">
+                <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                </svg>
+                <span class="sr-only">{{ 'CARD._close' | translate }}</span>
                 </button>
             </div>
+
             <!-- Modal body -->
-            <div class="w-full max-h-[80vh] overflow-y-auto">
-               <app-billing-account-form [billAcc]="billToUpdate"></app-billing-account-form>
+            <div class="p-4 max-h-[80vh] overflow-y-auto">
+                <app-billing-account-form [billAcc]="billToUpdate"></app-billing-account-form>
             </div>
+
         </div>
     </div>
+
 }
 
 <!-- BILL ADDRESS DELETE modal -->
