--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
@@ -150,14 +150,14 @@
                         <app-markdown-textarea class="col-span-2" formControlName="description"></app-markdown-textarea>
 
                     </form>
-                    <div class="flex w-full justify-items-end justify-end">
+                    <!--<div class="flex w-full justify-items-end justify-end">
                         <button data-cy="btnNext" type="button" (click)="goToStep(currentStep + 1)" [disabled]="!generalForm.valid" [ngClass]="!generalForm.valid ? 'opacity-50' : 'hover:bg-primary-50'" class="flex text-white justify-end align-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                             {{ 'UPDATE_PROD_SPEC._next' | translate }}
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                             </svg>
                         </button>
-                    </div>
+                    </div>-->
                 }
                 @if (currentStep === 1 && BUNDLE_ENABLED) {
                     <div class="col-span-2 flex align-items-middle h-fit m-4">
@@ -258,14 +258,14 @@
                             </div>
                         }
                     }
-                    <div class="flex w-full justify-items-end justify-end ml-4">
+                    <!--<div class="flex w-full justify-items-end justify-end ml-4">
                         <button data-cy="btnNext" type="button" (click)="goToStep(currentStep + 1)" [disabled]="prodSpecsBundle.length<2 && bundleChecked" [ngClass]="(prodSpecsBundle.length<2 && bundleChecked) ? 'opacity-50' : 'hover:bg-primary-50'" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                             {{ 'UPDATE_PROD_SPEC._next' | translate }}
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                             </svg>
                         </button>
-                    </div>
+                    </div>-->
                 }
                 @if ((currentStep === 1 && !BUNDLE_ENABLED) || (currentStep === 2 && BUNDLE_ENABLED)) {
                     <h3 class="font-bold text-primary-100 dark:text-primary-50 text-left ml-4">
@@ -438,7 +438,7 @@
                             </div>
 
                             <!-- Button -->
-                            <button data-cy="btnNext" type="button" (click)="goToStep(currentStep + 1)"
+                            <!--<button data-cy="btnNext" type="button" (click)="goToStep(currentStep + 1)"
                                     [disabled]="checkValidISOS()"
                                     [ngClass]="checkValidISOS() ? 'opacity-50 cursor-not-allowed' : 'hover:bg-primary-50'"
                                     class="flex text-white bg-primary-100 focus:ring-4 focus:outline-none
@@ -448,7 +448,7 @@
                                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                                 </svg>
-                            </button>
+                            </button>-->
                         </div>
                     </div>
 
@@ -718,14 +718,14 @@
     
                         </div>
                     }
-                    <div class="flex w-full justify-items-end justify-end ml-4 mt-4">
+                    <!--<div class="flex w-full justify-items-end justify-end ml-4 mt-4">
                         <button data-cy="btnNext" type="button" (click)="goToStep(currentStep + 1)" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                             {{ 'UPDATE_PROD_SPEC._next' | translate }}
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                             </svg>
                         </button>
-                    </div>                    
+                    </div>  -->                  
                 }
             
                 @if ((currentStep === 3 && !BUNDLE_ENABLED) || (currentStep === 4 && BUNDLE_ENABLED)) {
@@ -821,14 +821,14 @@
                             <span class="sr-only">Loading...</span>
                             </div>
                         }
-                    <div class="flex w-full justify-items-end justify-end ml-4">
+                    <!--<div class="flex w-full justify-items-end justify-end ml-4">
                         <button data-cy="btnNext" type="button" (click)="goToStep(currentStep + 1)" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                             {{ 'UPDATE_PROD_SPEC._next' | translate }}
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                             </svg>
                         </button>
-                    </div>
+                    </div>-->
                 }
                 @if ((currentStep === 4 && !BUNDLE_ENABLED) || (currentStep === 5 && BUNDLE_ENABLED)) {
                     @if(loadingServiceSpec){
@@ -923,14 +923,14 @@
                             <span class="sr-only">Loading...</span>
                             </div>
                         }
-                    <div class="flex w-full justify-items-end justify-end ml-4">
+                    <!--<div class="flex w-full justify-items-end justify-end ml-4">
                         <button data-cy="btnNext" type="button" (click)="goToStep(currentStep + 1)" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                             {{ 'UPDATE_PROD_SPEC._next' | translate }}
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                             </svg>
                         </button>
-                    </div>
+                    </div>-->
                 }
                 @if ((currentStep === 5 && !BUNDLE_ENABLED) || (currentStep === 6 && BUNDLE_ENABLED)) {
                     <div class="inline-flex">
@@ -1123,14 +1123,14 @@
                             </div>
                         </div>
                     }
-                    <div class="flex w-full justify-items-end justify-end ml-4 mt-4">
+                    <!--<div class="flex w-full justify-items-end justify-end ml-4 mt-4">
                         <button data-cy="btnNext" type="button" (click)="goToStep(currentStep + 1)" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                             {{ 'UPDATE_PROD_SPEC._next' | translate }}
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                             </svg>
                         </button>
-                    </div>  
+                    </div>  -->
                 }
                 @if ((currentStep === 6 && !BUNDLE_ENABLED) || (currentStep === 7 && BUNDLE_ENABLED)) {
                     <div class="m-4">
@@ -1298,14 +1298,14 @@
                             </div>
                         }
                     </div>
-                    <div class="flex w-full justify-items-end justify-end ml-4">
+                    <!--<div class="flex w-full justify-items-end justify-end ml-4">
                         <button data-cy="btnFinish" type="button" (click)="goToStep(currentStep + 1)" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                             {{ 'UPDATE_PROD_SPEC._finish' | translate }}
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                             </svg>
                         </button>
-                    </div> 
+                    </div> -->
                 }
                 @if ((currentStep === 7 && !BUNDLE_ENABLED) || (currentStep === 8 && BUNDLE_ENABLED)) {
                     <div class="m-8">
@@ -1604,18 +1604,57 @@
                             </div>
                         }
                         }
-                        <div class="flex w-full justify-items-end justify-end ml-4">
+                        <!--<div class="flex w-full justify-items-end justify-end ml-4">
                             <button data-cy="productSpecUpdate" type="button" (click)="updateProduct();" [disabled]="isProdValid()||loading" [ngClass]="(isProdValid() || loading) ? 'opacity-50' : 'hover:bg-primary-50'"  class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                                 {{ 'UPDATE_PROD_SPEC._update_prod' | translate }}
                                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                                 </svg>
                             </button>
-                        </div>
+                        </div>-->
                     </div>
                 }
 
-            </div>            
+            </div>       
+            <!-- Navigation Buttons -->
+            <div class="flex justify-end mt-6 space-x-4">
+                <button (click)="goToStep(currentStep - 1)"
+                        [disabled]="currentStep === 0"
+                        [ngClass]="{
+                        'text-gray-500 dark:text-gray-400 hover:bg-gray-100 hover:text-gray-700 dark:hover:bg-gray-700 dark:hover:text-white': currentStep !== 0,
+                        'text-gray-300 dark:text-gray-600 cursor-not-allowed': currentStep === 0
+                        }"
+                        class="px-4 py-2 flex items-center justify-center text-base font-medium rounded-lg  bg-white border border-gray-300 dark:bg-gray-800 dark:border-gray-700 ">
+                    <svg class="min-w-4 w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                    <path fill="currentColor"
+                            d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3
+                            256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/>
+                    </svg>
+                    {{ 'CREATE_OFFER._previous' | translate }}
+                </button>
+        
+                <button (click)="goToStep(currentStep + 1)"
+                        [disabled]="currentStep === steps.length - 1 || !canNavigate(currentStep) || isStepDisabled()"
+                        [ngClass]="{
+                        'hover:bg-gray-100 hover:text-gray-700 dark:hover:bg-gray-700 dark:hover:text-white': currentStep !== steps.length - 1 && (validateCurrentStep() || canNavigate(currentStep)),
+                        'cursor-not-allowed opacity-50': currentStep === steps.length - 1 ||  !canNavigate(currentStep) || isStepDisabled()
+                        }"
+                        class="px-4 py-2 flex items-center justify-center text-base font-medium rounded-lg text-gray-500 bg-white border border-gray-300 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400">
+                    {{ 'CREATE_OFFER._next_step' | translate }}
+                <svg class="min-w-4 w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                    <path fill="currentColor"
+                        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7
+                        256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+                </svg>
+                </button>
+                <button (click)="updateProduct()"
+                [disabled]="isStepDisabled() || loading"
+                [ngClass]="loading || isStepDisabled() ? 'opacity-50' : 'hover:bg-primary-50'"
+        
+                class="px-4 py-2 text-base font-medium text-white rounded-lg bg-primary-100">
+                    Update Product
+                </button>
+            </div>     
         </div>
     </div>
 
